syntax = "proto3";

package grpc;

option go_package = "github.com/codepod/codepod/sandbox/agent/pkg/grpc/pb";

service ExecService {
  // OpenSession opens an execution session (for multiplexing)
  rpc OpenSession(OpenSessionRequest) returns (stream CommandOutput);

  // Execute runs a single command
  rpc Execute(ExecuteRequest) returns (stream CommandOutput);
}

message OpenSessionRequest {
  string sandbox_id = 1;
  string token = 2;
}

message ExecuteRequest {
  string command = 1;
  string cwd = 2;
  map<string, string> env = 3;
  int64 timeout = 4;
}

message CommandOutput {
  string line = 1;
  OutputChannel channel = 2;
  bool end = 3;
  int32 exit_code = 4;
}

enum OutputChannel {
  STDOUT = 0;
  STDERR = 1;
}
